PRIMA PARTE ESERCIZIO SVOLTA

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Pali & Dispari</title>
 </head>
 <body>
+    <div id="pali"></div>
+    <div id="non_pali"></div>
     <script src="js/script.js"></script>
 </body>
 </html>
