--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <div id="pali"></div>
     <div id="non_pali"></div>
+    <div id="sceltaPc"></div>
+    <div id="esitoGara"></div>
     <script src="js/script.js"></script>
 </body>
 </html>
